test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: test
spec:
  containers:
  - name: test
    image: ubuntu:24.04
    command: ["sleep", "3000"]
    volumeMounts:
    - name: var-run-volume
      mountPath: /var/run/
  volumes:
  - name: var-run-volume
    hostPath:
      path: /var/run/
      type: Directory
