awx-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: awxprod.lottomatica.com # awx-dev.lottomatica.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: awx-service
            port:
              number: 80
